--- a/src/get_velocity/CMakeLists.txt
+++ b/src/get_velocity/CMakeLists.txt
@@ -1,18 +1,17 @@
 cmake_minimum_required(VERSION 2.8.3)
-project(ur5_jacobian)
+project(get_velocity)
+
+## Add support for C++11, supported in ROS Kinetic and newer
+# add_definitions(-std=c++11)
 
 ## Find catkin macros and libraries
 ## if COMPONENTS list like find_package(catkin REQUIRED COMPONENTS xyz)
 ## is used, also find other catkin packages
 find_package(catkin REQUIRED COMPONENTS
-  geometry_msgs
-  moveit_core
-  moveit_ros_planning_interface
   roscpp
   rospy
-  sensor_msgs
+  std_msgs
   tf
-  trajectory_msgs
 )
 
 ## System dependencies are found with CMake's conventions
@@ -72,7 +71,7 @@ find_package(catkin REQUIRED COMPONENTS
 ## Generate added messages and services with any dependencies listed here
 # generate_messages(
 #   DEPENDENCIES
-#   geometry_msgs#   sensor_msgs#   trajectory_msgs
+#   std_msgs
 # )
 
 ################################################
@@ -106,8 +105,8 @@ find_package(catkin REQUIRED COMPONENTS
 ## DEPENDS: system dependencies of this project that dependent projects also need
 catkin_package(
 #  INCLUDE_DIRS include
-#  LIBRARIES ur5_jacobian
-#  CATKIN_DEPENDS geometry_msgs moveit_core moveit_ros_planning_interface roscpp roscpp sensor_msgs tf trajectory_msgs
+#  LIBRARIES get_velocity
+#  CATKIN_DEPENDS roscpp rospy std_msgs
 #  DEPENDS system_lib
 )
 
@@ -123,60 +122,35 @@ include_directories(
 )
 
 ## Declare a C++ library
-# add_library(ur5_jacobian
-#   src/${PROJECT_NAME}/ur5_jacobian.cpp
+# add_library(${PROJECT_NAME}
+#   src/${PROJECT_NAME}/get_velocity.cpp
 # )
 
 ## Add cmake target dependencies of the library
 ## as an example, code may need to be generated before libraries
 ## either from message generation or dynamic reconfigure
-# add_dependencies(ur5_jacobian ${${PROJECT_NAME}_EXPORTED_TARGETS} ${catkin_EXPORTED_TARGETS})
+# add_dependencies(${PROJECT_NAME} ${${PROJECT_NAME}_EXPORTED_TARGETS} ${catkin_EXPORTED_TARGETS})
 
 ## Declare a C++ executable
-# add_executable(ur5_jacobian_node src/ur5_jacobian_node.cpp)
+## With catkin_make all packages are built within a single CMake context
+## The recommended prefix ensures that target names across packages don't collide
+add_executable(${PROJECT_NAME}_node src/get_velocity_node.cpp)
+
+## Rename C++ executable without prefix
+## The above recommended prefix causes long target names, the following renames the
+## target back to the shorter version for ease of user use
+## e.g. "rosrun someones_pkg node" instead of "rosrun someones_pkg someones_pkg_node"
+# set_target_properties(${PROJECT_NAME}_node PROPERTIES OUTPUT_NAME node PREFIX "")
 
 ## Add cmake target dependencies of the executable
 ## same as for the library above
-# add_dependencies(ur5_jacobian_node ${${PROJECT_NAME}_EXPORTED_TARGETS} ${catkin_EXPORTED_TARGETS})
+add_dependencies(${PROJECT_NAME}_node ${${PROJECT_NAME}_EXPORTED_TARGETS} ${catkin_EXPORTED_TARGETS})
 
 ## Specify libraries to link a library or executable target against
-# target_link_libraries(ur5_jacobian_node
-#   ${catkin_LIBRARIES}
-# )
-
-## Declare a C++ executable
-add_executable(pure_vel_ctrl src/pure_vel_ctrl.cpp)
-
-## Add cmake target dependencies of the executable
-## same as for the library above
-add_dependencies(pure_vel_ctrl ${${PROJECT_NAME}_EXPORTED_TARGETS} ${catkin_EXPORTED_TARGETS})
-
-## Specify libraries to link a library or executable target against
-target_link_libraries(pure_vel_ctrl
+target_link_libraries(${PROJECT_NAME}_node
    ${catkin_LIBRARIES}
 )
-## Declare a C++ executable
-add_executable(draw_circle src/draw_circle.cpp)
 
-## Add cmake target dependencies of the executable
-## same as for the library above
-add_dependencies(draw_circle  ${${PROJECT_NAME}_EXPORTED_TARGETS} ${catkin_EXPORTED_TARGETS})
-
-## Specify libraries to link a library or executable target against
-target_link_libraries(draw_circle 
-   ${catkin_LIBRARIES}
-)
-## Declare a C++ executable
-add_executable(ur5_control_interface src/ur5_control_interface.cpp)
-
-## Add cmake target dependencies of the executable
-## same as for the library above
-add_dependencies(ur5_control_interface  ${${PROJECT_NAME}_EXPORTED_TARGETS} ${catkin_EXPORTED_TARGETS})
-
-## Specify libraries to link a library or executable target against
-target_link_libraries(ur5_control_interface 
-   ${catkin_LIBRARIES}
-)
 #############
 ## Install ##
 #############
@@ -192,7 +166,7 @@ target_link_libraries(ur5_control_interface
 # )
 
 ## Mark executables and/or libraries for installation
-# install(TARGETS ur5_jacobian ur5_jacobian_node
+# install(TARGETS ${PROJECT_NAME} ${PROJECT_NAME}_node
 #   ARCHIVE DESTINATION ${CATKIN_PACKAGE_LIB_DESTINATION}
 #   LIBRARY DESTINATION ${CATKIN_PACKAGE_LIB_DESTINATION}
 #   RUNTIME DESTINATION ${CATKIN_PACKAGE_BIN_DESTINATION}
@@ -217,7 +191,7 @@ target_link_libraries(ur5_control_interface
 #############
 
 ## Add gtest based cpp test target and link libraries
-# catkin_add_gtest(${PROJECT_NAME}-test test/test_ur5_jacobian.cpp)
+# catkin_add_gtest(${PROJECT_NAME}-test test/test_get_velocity.cpp)
 # if(TARGET ${PROJECT_NAME}-test)
 #   target_link_libraries(${PROJECT_NAME}-test ${PROJECT_NAME})
 # endif()
