--- a/src/ur5_jacobian/CMakeLists.txt
+++ b/src/ur5_jacobian/CMakeLists.txt
@@ -189,15 +189,29 @@ add_dependencies(publish_path  ${${PROJECT_NAME}_EXPORTED_TARGETS} ${catkin_EXPO
 target_link_libraries(publish_path 
    ${catkin_LIBRARIES}
 )
+
+
 ## Declare a C++ executable
-add_executable(moving_average src/moving_average.cpp)
+add_executable(arm_controller src/arm_controller.cpp src/moving_average.cpp)
 
 ## Add cmake target dependencies of the executable
 ## same as for the library above
-add_dependencies(moving_average  ${${PROJECT_NAME}_EXPORTED_TARGETS} ${catkin_EXPORTED_TARGETS})
+add_dependencies(arm_controller  ${${PROJECT_NAME}_EXPORTED_TARGETS} ${catkin_EXPORTED_TARGETS})
 
 ## Specify libraries to link a library or executable target against
-target_link_libraries(moving_average 
+target_link_libraries(arm_controller 
+   ${catkin_LIBRARIES}
+)
+
+## Declare a C++ executable
+add_executable(follower_with_orientation src/follower_with_orientation.cpp)
+
+## Add cmake target dependencies of the executable
+## same as for the library above
+add_dependencies(follower_with_orientation  ${${PROJECT_NAME}_EXPORTED_TARGETS} ${catkin_EXPORTED_TARGETS})
+
+## Specify libraries to link a library or executable target against
+target_link_libraries(follower_with_orientation
    ${catkin_LIBRARIES}
 )
 #############
