--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,6 @@ build/
 devel/
 bags/
 src/aimm_moveit_config/default_warehouse_mongo_db/
+src/shadow_calibration/
+src/marker_detector/
+src/rgbd_srvs/
