--- a/src/ur5_jacobian/CMakeLists.txt
+++ b/src/ur5_jacobian/CMakeLists.txt
@@ -190,6 +190,18 @@ target_link_libraries(publish_path
    ${catkin_LIBRARIES}
 )
 
+## Declare a C++ executable
+add_executable(publish_spray_path src/publish_spray_path.cpp)
+
+## Add cmake target dependencies of the executable
+## same as for the library above
+add_dependencies(publish_spray_path  ${${PROJECT_NAME}_EXPORTED_TARGETS} ${catkin_EXPORTED_TARGETS})
+
+## Specify libraries to link a library or executable target against
+target_link_libraries(publish_spray_path 
+   ${catkin_LIBRARIES}
+)
+
 
 ## Declare a C++ executable
 add_executable(arm_controller src/arm_controller.cpp src/moving_average.cpp)
