--- a/src/get_velocity/CMakeLists.txt
+++ b/src/get_velocity/CMakeLists.txt
@@ -138,6 +138,7 @@ add_executable(${PROJECT_NAME}_node src/get_velocity_node.cpp)
 add_executable(get_laser_vel src/get_laser_velocity_node.cpp)
 add_executable(move_platform src/move_platform.cpp)
 add_executable(move_platform2 src/move_platform2.cpp)
+add_executable(move_platform3 src/move_platform3.cpp)
 ## Rename C++ executable without prefix
 ## The above recommended prefix causes long target names, the following renames the
 ## target back to the shorter version for ease of user use
@@ -150,6 +151,7 @@ add_dependencies(${PROJECT_NAME}_node ${${PROJECT_NAME}_EXPORTED_TARGETS} ${catk
 add_dependencies(get_laser_vel ${${PROJECT_NAME}_EXPORTED_TARGETS} ${catkin_EXPORTED_TARGETS})
 add_dependencies(move_platform ${${PROJECT_NAME}_EXPORTED_TARGETS} ${catkin_EXPORTED_TARGETS})
 add_dependencies(move_platform2 ${${PROJECT_NAME}_EXPORTED_TARGETS} ${catkin_EXPORTED_TARGETS})
+add_dependencies(move_platform3 ${${PROJECT_NAME}_EXPORTED_TARGETS} ${catkin_EXPORTED_TARGETS})
 ## Specify libraries to link a library or executable target against
 target_link_libraries(${PROJECT_NAME}_node
    ${catkin_LIBRARIES}
@@ -163,6 +165,9 @@ target_link_libraries(move_platform
    ${catkin_LIBRARIES}
 )
 target_link_libraries(move_platform2
+   ${catkin_LIBRARIES}
+)
+target_link_libraries(move_platform3
    ${catkin_LIBRARIES}
 )
 
