--- a/src/ur5_jacobian/CMakeLists.txt
+++ b/src/ur5_jacobian/CMakeLists.txt
@@ -202,6 +202,18 @@ target_link_libraries(publish_spray_path
    ${catkin_LIBRARIES}
 )
 
+## Declare a C++ executable
+add_executable(publish_deburring_path src/publish_deburring_path.cpp)
+
+## Add cmake target dependencies of the executable
+## same as for the library above
+add_dependencies(publish_deburring_path  ${${PROJECT_NAME}_EXPORTED_TARGETS} ${catkin_EXPORTED_TARGETS})
+
+## Specify libraries to link a library or executable target against
+target_link_libraries(publish_deburring_path 
+   ${catkin_LIBRARIES}
+)
+
 
 ## Declare a C++ executable
 add_executable(arm_controller src/arm_controller.cpp src/moving_average.cpp)
